--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.7.2",
+    "firebase": "^10.5.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "moment-timezone": "^0.5.43",
@@ -18,6 +19,7 @@
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
     "sort-by": "^1.2.0"
   },
