--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.7.2",
     "axios": "^1.6.1",
     "firebase": "^10.5.2",
+    "framer-motion": "^10.16.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "moment-timezone": "^0.5.43",
