--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
     "framer-motion": "^10.16.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.30.1",
     "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
+    "react-dropdown-select": "^4.11.1",
+    "react-fast-marquee": "^1.6.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-player": "^2.13.0",
     "react-router-dom": "^6.18.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "swiper": "^11.0.3"
   },
